--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ Twenty Twenty-Two is distributed under the terms of the GNU GPL.
 body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+  background-color: red;
 }
 
 /*
@@ -52,10 +53,6 @@ a:active {
 .wp-block-navigation .wp-block-navigation-item a:focus {
   text-decoration: underline;
   text-decoration-style: solid;
-}
-
-.wp-block-navigation .wp-block-navigation-item__content {
-  color: red !important;
 }
 
 /*
