--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ Twenty Twenty-Two is distributed under the terms of the GNU GPL.
 body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  background-color: red;
+  background-color: red !important;
 }
 
 /*
